# The-Elder-Tongue

./: .gitignore  CMakeLists.txt  ECS.cpp  ECS.h  README.md  The Elder Tongue.cpp  The Elder Tongue.sln  The Elder Tongue.vcxproj  The Elder Tongue.vcxproj.filters  animation_2D.cpp  animation_2D.h  check_error.cpp  check_error.h  component.h  ecs.cpp  ecs.h  engine.h  entity.cpp  entity.h  entity_manager.h  game.cpp  game.h  main.cpp  particleengine.h  renderer.cpp  renderer.h  shader.cpp  shader.h  system.h  texture_2D.cpp  texture_2D.h  world.h
assets/shaders/: quad.frag  quad.vert
libs/glfw-3.3.4/src/: context.c  window.c
src/: animation_2D.cpp  animation_2D.h  component.h  ecs.cpp  ecs.h  entity.h  game.cpp  game.h  main.cpp  particleengine.h  renderer.cpp  renderer.h  savesystem.h  shader.h  system.h  textrenderer.cpp  textrenderer.h
